Fixed cart view on mobile

--- a/src/app/Items/cart/cart.component.css
+++ b/src/app/Items/cart/cart.component.css
@@ -17,7 +17,7 @@ svg{
     cursor: pointer;
 }
 .payment-card{
-    width: 10%;
+    width: 11%;
     cursor: pointer;
     border-radius: 5px;
     border: solid 1px azure;
